# src/firecracker/swagger/firecracker.yaml
@@ -169,6 +169,63 @@ paths:
           schema:
             $ref: "#/definitions/Error"
 
+  /balloon/hinting/start:
+    patch:
+      summary: Starts a free page hinting run only if enabled pre-boot.
+      operationId: startBalloonHinting
+      parameters:
+        - name: body
+          in: body
+          description: When the device completes the hinting whether we should automatically ack this.
+          required: false
+          schema:
+            $ref: "#/definitions/BalloonStartCmd"
+      responses:
+        200:
+          description: Free page hinting run started.
+        400:
+          description: The balloon free hinting was not enabled when the device was configured.
+          schema:
+            $ref: "#/definitions/Error"
+        default:
+          description: Internal Server Error
+          schema:
+            $ref: "#/definitions/Error"
+
+  /balloon/hinting/status:
+    get:
+      summary: Returns the balloon hinting statistics, only if enabled pre-boot.
+      operationId: describeBalloonHinting
+      responses:
+        200:
+          description: The balloon free page hinting statistics
+          schema:
+            $ref: "#/definitions/BalloonHintingStatus"
+        400:
+          description: The balloon free hinting was not enabled when the device was configured.
+          schema:
+            $ref: "#/definitions/Error"
+        default:
+          description: Internal Server Error
+          schema:
+            $ref: "#/definitions/Error"
+
+  /balloon/hinting/stop:
+    patch:
+      summary: Stops a free page hinting run only if enabled pre-boot.
+      operationId: stopBalloonHinting
+      responses:
+        200:
+          description: Free page hinting run stopped.
+        400:
+          description: The balloon free hinting was not enabled when the device was configured.
+          schema:
+            $ref: "#/definitions/Error"
+        default:
+          description: Internal Server Error
+          schema:
+            $ref: "#/definitions/Error"
+
   /boot-source:
     put:
       summary: Creates or updates the boot source. Pre-boot only.
@@ -182,7 +239,7 @@ paths:
           description: Guest boot source properties
           required: true
           schema:
-            $ref: "#/definitions/BootSource"
+            $ref: "#/definitions/BalloonStartCmd"
       responses:
         204:
           description: Boot source created/updated
@@ -829,6 +886,12 @@ definitions:
       stats_polling_interval_s:
         type: integer
         description: Interval in seconds between refreshing statistics. A non-zero value will enable the statistics. Defaults to 0.
+      free_page_hinting:
+        type: boolean
+        description: Whether the free page hinting feature is enabled.
+      free_page_reporting:
+        type: boolean
+        description: Whether the free page reporting feature is enabled.
 
   BalloonUpdate:
     type: object
@@ -903,6 +966,29 @@ definitions:
         description: The number of failed hugetlb page allocations in the guest.
         type: integer
         format: int64
+
+  BalloonStartCmd:
+    type: object
+    description:
+      Command used to start a free page hinting run.
+    properties:
+      acknowledge_on_stop:
+        description: If Firecracker should automatically acknowledge when the guest submits a done cmd.
+        type: boolean
+
+  BalloonHintingStatus:
+    type: object
+    description:
+      Describes the free page hinting status.
+    required:
+      - host_cmd
+    properties:
+      host_cmd:
+        description: The last command issued by the host.
+        type: integer
+      guest_cmd:
+        description: The last command provided by the guest.
+        type: integer
 
   BalloonStatsUpdate:
     type: object
